# light_weight_stereo_mapper

./: CMakeLists.txt  README.md  build.sh  compile_lib.sh
source/camodocal/camera_models/: Camera.h  CameraFactory.cc  CameraFactory.h  EquidistantCamera.h  ScaramuzzaCamera.cc
stereo_mapping/: CMakeLists.txt  log.md  package.xml
stereo_mapping/offline_test/: CMakeLists.txt
stereo_mapping/offline_test/euroc_config/: EurocStereo.yaml
stereo_mapping/offline_test/euroc_test/: CMakeLists.txt  euroc_reader.cpp  euroc_reader.h  euroc_stereo_main.cpp
stereo_mapping/source/: CMakeLists.txt
stereo_mapping/source/camodocal/: CMakeLists.txt
stereo_mapping/source/camodocal/camera_models/: CataCamera.h  PinholeCamera.h  ScaramuzzaCamera.h
stereo_mapping/source/feature/: ORB_matcher.h  feature_extractor.cc  feature_extractor.h  feature_matcher.h  stereo_matcher.cc  stereo_matcher.h
stereo_mapping/source/struct/: CMakeLists.txt  feature.h  feature_point.h  frame.cc  frame.h  map_point.h
stereo_mapping/source/system/: CMakeLists.txt  backend_optim .cc  backend_optim.cc  backend_optim.h  data_que.h  estimator_sys.cc  estimator_sys.h  frontend_tracker.cc  frontend_tracker.h  img_preprocessor.cc  img_preprocessor.h
stereo_mapping/source/util/: CMakeLists.txt  alignment.h  cache.h  common_math.cc  common_math.h  common_string.cc  common_string.h  file.txt  geo_3d.h  logging.cc  logging.h  matrix.h  random.cc  random.h  threading.cc  threading.h  tic_toc.h  timer.cc  timer.h  types.h
stereo_mapping/source/view_geo/: README.md  view_geo.h
stereo_mapping/source/view_geo/process/: common.cc  common.h  essential_matrix.cc  essential_matrix.h  homography_matrix.h  triangulation.h
stereo_mapping/source/view_geo/ransac/: ransac.h
zed_wrapper_test/: CMakeLists.txt  package.xml  zed_wrapper_test.cpp
